fixing pre/code wrapping on moible

--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -261,7 +261,7 @@ kbd,
     padding: 13px;
     background: rgba($gray-500, 0.4);
     line-height: 1.3;
-    white-space: pre;
+    white-space: pre-wrap;
     margin-bottom: 10px;
     border-radius: 0px;
     overflow-wrap: break-word;
